URLLoaderImpl: cancel watching writability of response body handle before closing it.

BUG=766240

Change-Id: Ie8b0dade40c90d534b0b1a78a9011f50eb3c08e3